log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:07:04 PM UTC 2026: 
 graph.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:52:51: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   52 |     MapPair* pair = map_search(g -> adjacencyMap, label1);
      |                                                   ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c: At top level:
graph.c:67:5: error: expected identifier or ‘(’ before ‘return’
   67 |     return -1;
      |     ^~~~~~
graph.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
   68 | }
      | ^
graph.c: In function ‘getWeight’:
graph.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
d37bbbc
Thu May 14 08:07:32 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c:67:5: error: expected identifier or ‘(’ before ‘return’
   67 |     return -1;
      |     ^~~~~~
graph.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
   68 | }
      | ^
graph.c: In function ‘getWeight’:
graph.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
cb07fd5
Thu May 14 08:07:51 PM UTC 2026: 
 graph.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|6
========================================
15c8531
Thu May 14 08:08:31 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
60d902b
Thu May 14 08:10:43 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
4936991
Thu May 14 08:11:41 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
06b3404
Thu May 14 08:11:53 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
dd61345
Thu May 14 08:12:11 PM UTC 2026: 
 graph.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
========================================
21a0adf
Thu May 14 08:13:53 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
========================================
79374ba
Thu May 14 08:15:46 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8e2e62f
Thu May 14 08:16:44 PM UTC 2026: 
 graph.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:55:9: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   55 |         return;
      |         ^~~~~~
graph.c:49:5: note: declared here
   49 | int getWeight(Graph* g, const char* label1, const char* label2) {
      |     ^~~~~~~~~
b2c13d2
